Refactor Trie data structure for thread-safety and efficiency, and update Javadoc documentation.
This commit replaces the manual word counting logic in the `Trie` class with a dynamic traversal-based `size()` method and introduces thread-safe node insertion using `AtomicReferenceArray.compareAndSet`. It also renames internal helper methods and updates the generated Javadoc to reflect these architectural changes.

- **Trie Refactoring & Optimization:**
    - **`Trie` Class:** Removed the `size` (`AtomicInteger`) field. Refactored `size()` to calculate the word count on-demand via recursion.
    - **Thread-Safety:** Replaced `put(char)` and `put(char, T)` with a single `putIfAbsent(char)` method that utilizes `compareAndSet` to ensure atomic node creation.
    - **Internal API:** Renamed `getWordsRec` to `_getWords` for better internal naming consistency.
    - **Logic Cleanup:** Simplified the `put(String)` method to use `putIfAbsent` and removed redundant checks before insertion.

- **Documentation & Build:**
    - **Javadoc:** Updated `Trie.html`, `PathTrie.html`, and `Dictionary.html` to reflect the removal of the `size` field and the introduction of `putIfAbsent`.
    - **Search Index:** Regenerated `member-search-index.js` and `index-all.html` to sync with the latest class members.
    - **Build Script:** Removed a redundant comment block in `app/build.gradle.kts`.